src/tests/testfiles/binary-operators/types-29.txt
testfiles/binary-operators/types-29.c:2:5: error: invalid operands to logical 'or' (have 'int' and 'char []')
5 || "&";
^
